openshift/blue/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    maintainer: 'Aly Ibrahim <aly@redhat.com>'
    alpha.image.policy.openshift.io/resolve-names: '*'
  name: hello-node-blue
  labels:
    app: hello-node
    color: blue
    app.kubernetes.io/component: hello-node
    app.kubernetes.io/instance: hello-node
    app.kubernetes.io/part-of: hello-node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-node
      color: blue
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-node
        color: blue
    spec:
      containers:
        - name: hello-node
          image: >-
                  quay.io/aibrahim/hello-node:blue
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
