openshift/blue/service.yml
kind: Service
apiVersion: v1
metadata:
  annotations:
    maintainer: 'Aly Ibrahim <aly@redhat.com>'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://github.com/AlyIbrahim/hello-node-demo.git'
  name: hello-node-blue
  labels:
    app: hello-node
    color: blue
    app.kubernetes.io/component: hello-node
    app.kubernetes.io/instance: hello-node
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: hello-node
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: '12'
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 3000
  selector:
    app: hello-node
    color: blue
  type: ClusterIP
  sessionAffinity: None
